# SecondOpinion

./: README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  test-theme.js
client/src/: App.jsx  index.css
client/src/components/: ShareModal.jsx  ShareTest.jsx
client/src/components/Model/: ModelCard.jsx  ModelGrid.jsx  ModelInfo.jsx
client/src/components/common/: Header.jsx  LogoutConfirmation.jsx  Modal.jsx  ToggleButton.jsx  (+1 more)
client/src/context/: AuthContext.jsx  DetectionContext.jsx  ModelContext.jsx  THEME_README.md  ThemeContext.jsx
client/src/data/: categories.js
client/src/hooks/: useDetection.js  useModel.js
client/src/layouts/: DashboardLayout.jsx  DetectionLayout.jsx  ModelLayout.jsx  PublicLayout.jsx
client/src/pages/: Dashboard.jsx
client/src/services/: api.js  authService.js  detectionService.js  historyService.js  shareService.js  tumorService.js
client/src/styles/: detection.css  models.css
client/src/utils/: formatters.js  imageUtils.js  pdfGenerator.js  validation.js
server/: .env.example  .gitignore  README.md  SecondOpinionProposal.docx  migrate_db.py  pyproject.toml  run.py  test.db  test_email.py  test_share.py
server/app/: main.py
server/app/api/: auth.py  history.py  share.py  upload.py
server/app/core/: background_tasks.py  config.py  email.py  otp_cleanup.py  otp_scheduler.py  security.py
server/app/schemas/: prediction.py  user.py
server/app/services/: email_service.py  optimized_otp_service.py  otp_service.py  prediction_service.py
server/app/utils/: model_utils.py  pdfGenerator.py
(+32 files in other folders)
